[package]
name = "interpreter"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
async-nats = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
dotenvy = { workspace = true }
sqlx = { workspace = true, features = [
    "runtime-tokio-native-tls",
    "postgres",
    "json",
] }
futures = { workspace = true }
